# TT-Motor-Turntable

./: .gitignore  LICENSE  README.md
doc/: getting_started.md
firmware/diy_turntable/: CMakeLists.txt  partitions.csv
firmware/diy_turntable/components/tb6612/: CMakeLists.txt  tb6612.c  tb6612.h
firmware/diy_turntable/main/: CMakeLists.txt  Kconfig.projbuild  main.c
firmware/diy_turntable/main/app_spiffs/: app_spiffs.c  app_spiffs.h
firmware/diy_turntable/main/motor/: app_motor.c  app_motor.h
firmware/diy_turntable/main/web/: app_web.c  app_web.h
firmware/diy_turntable/main/wifi/: app_wifi.c  app_wifi.h
firmware/diy_turntable/spiffs/: app.js  index.html  style.css
